structure and comments

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -15,6 +15,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Retrieve dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 212,
    "metadata": {},
@@ -272,14 +279,24 @@
    ],
    "source": [
     "df = pd.read_csv('../input/spy.csv')\n",
+    "\n",
+    "# Verify if no nan or inf values\n",
     "print(df.isna().sum())\n",
     "print(np.isinf(df[['Close', 'Volume', 'Weekday']]).sum())\n",
+    "\n",
     "df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -295,12 +312,32 @@
    ],
    "source": [
     "df = df.copy()\n",
+    "\n",
+    "# Convert 'Date' to datetime \n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
+    "\n",
+    "# Sample the data to reduce the number of points for plotting\n",
     "df_sampled = df.iloc[::10].copy()\n",
     "\n",
+    "# Function to plot the stock data\n",
     "def stocks_plot(df, start_date=None, end_date=None, format='%Y'):\n",
+    "    \"\"\"\n",
+    "    Plots the closing price of stocks over time with optional date filtering and formatting.\n",
+    "    Parameters:\n",
+    "    -----------\n",
+    "    df : pandas.DataFrame\n",
+    "        A DataFrame containing stock data. Must include 'Date' and 'Close' columns.\n",
+    "    start_date : str or None, optional\n",
+    "        The start date for filtering the data in 'YYYY-MM-DD' format. Defaults to None.\n",
+    "    end_date : str or None, optional\n",
+    "        The end date for filtering the data in 'YYYY-MM-DD' format. Defaults to None.\n",
+    "    format : str, optional\n",
+    "        The date format for the x-axis labels. Defaults to '%Y'.\n",
+    "    \"\"\"\n",
     "\n",
     "    df_filtered = df.copy()\n",
+    "\n",
+    "    # Filter the DataFrame based on the provided start and end dates\n",
     "    if start_date:\n",
     "        df_filtered = df_filtered[df_filtered['Date'] >= start_date]\n",
     "    if end_date:\n",
@@ -311,16 +348,81 @@
     "    plt.xlabel('Date')\n",
     "    plt.ylabel('Close Price')\n",
     "    plt.title('Stock Close Price Over Time')\n",
+    "\n",
+    "    # Format the x-axis to show dates\n",
     "    plt.gca().xaxis.set_major_locator(mdates.AutoDateLocator()) \n",
     "    plt.gca().xaxis.set_major_formatter(mdates.DateFormatter(format)) \n",
     "    plt.xticks(rotation=45)\n",
+    "\n",
+    "    # Set the x-axis and y-axis limits based on date limits and filtered data\n",
     "    plt.xlim(start_date, end_date)\n",
     "    plt.ylim(df_filtered['Close'].min() * 0.95, df_filtered['Close'].max() * 1.05)\n",
+    "\n",
     "    plt.grid(True, which='both', linestyle='--', linewidth=0.5, alpha=0.7)\n",
     "    plt.tight_layout()\n",
     "\n",
     "stocks_plot(df_sampled)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Random forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into training and testing sets\n",
+    "# Future data for testing as it aligns with how the model will be used in real-world scenarios\n",
+    "frac = 0.7\n",
+    "split_id = int(len(df) * frac)\n",
+    "df_train = df.iloc[:split_id]\n",
+    "df_test = df.iloc[split_id:]\n",
+    "\n",
+    "# Create a sliding window of n days and generate lagged features\n",
+    "n = 30\n",
+    "window = [i for i in range(n)]\n",
+    "df_train = df_train.copy()      # Since view of df, better to create a copy\n",
+    "for i in window:\n",
+    "    df_train[f'Close_{i}'] = df_train['Close'].shift(i)\n",
+    "df_train.dropna(inplace=True)       # Handle NaN values from shifting\n",
+    "features = [f'Close_{i}' for i in window]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Using RandomizedSearchCV for hyperparameter tuning\n",
+    "# search_model = RandomizedSearchCV(\n",
+    "#     estimator=RandomForestRegressor(),\n",
+    "#     param_distributions={\n",
+    "#         'n_estimators': [50, 100, 200, 500],\n",
+    "#         'max_depth': [10, 30, 50, None],\n",
+    "#         'min_samples_split': [2, 5, 10],\n",
+    "#         'min_samples_leaf': [1, 2, 4]\n",
+    "#     },\n",
+    "#     cv=5,\n",
+    "#     verbose=2,\n",
+    "#     n_jobs=-1\n",
+    "# )\n",
+    "# search_model.fit(df_train[features], df_train['Close'])\n",
+    "# print(search_model.best_params_)"
    ]
   },
   {
@@ -548,29 +650,26 @@
     }
    ],
    "source": [
-    "frac = 0.7\n",
-    "split_id = int(len(df) * frac)\n",
-    "df_train = df.iloc[:split_id]\n",
-    "df_test = df.iloc[split_id:]\n",
-    "\n",
+    "# Model with parameters found through RandomizedSearchCV\n",
     "model = RandomForestRegressor(n_estimators=50, max_depth=30, min_samples_split=5, random_state=42)\n",
     "\n",
-    "window = [i for i in range(30)]\n",
-    "df_train = df_train.copy()  # since view of df, better to create a copy\n",
-    "for i in window:\n",
-    "    df_train[f'Close_{i}'] = df_train['Close'].shift(i)\n",
-    "df_train.dropna(inplace=True)\n",
-    "\n",
-    "features = [f'Close_{i}' for i in window]\n",
+    "# Train the model\n",
     "model.fit(df_train[features], df_train['Close'])\n",
     "\n",
+    "# Get feature importances\n",
     "importances = model.feature_importances_\n",
     "feature_importance_df = pd.DataFrame({\n",
     "    'Feature': features,\n",
     "    'Importance': importances\n",
     "}).sort_values(by='Importance', ascending=False)\n",
-    "\n",
     "feature_importance_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Forecasting"
    ]
   },
   {
@@ -579,24 +678,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = []\n",
+    "# List of Close values for the last n days before the first test set item\n",
     "prev_list = [df_train['Close'].iloc[-i] for i in window]\n",
     "\n",
+    "y_pred = []\n",
+    "\n",
+    "# Iterate through the test set \n",
     "for i in range(len(df_test)):\n",
     "    input_data = pd.DataFrame([prev_list], columns=features)\n",
     "    \n",
+    "    # Predict the next value\n",
     "    current_pred = model.predict(input_data)[0]\n",
     "    y_pred.append(current_pred)\n",
     "\n",
+    "    # Window is updated with the new predicted value\n",
     "    prev_list = prev_list[1:] + [current_pred]\n",
     "\n",
-    "df_test = df_test.copy() # copy of test view from df_shift\n",
+    "df_test = df_test.copy() \n",
     "df_test['Close_pred'] = y_pred"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -611,8 +715,11 @@
     }
    ],
    "source": [
+    "# Define date limits for plotting\n",
     "start_date = df_test['Date'].iloc[0] - pd.Timedelta(days=7)\n",
     "end_date = df_test['Date'].iloc[0] + pd.Timedelta(days=100)\n",
+    "\n",
+    "# Plot to compare predictions with actual values\n",
     "stocks_plot(df, start_date, end_date, '%Y-%m-%d')\n",
     "plt.plot(df_test['Date'], df_test['Close_pred'], label='Close Price Prediction', color='red')\n",
     "plt.axvline(df_test['Date'].iloc[0], color='k', linestyle='--', linewidth=1)\n",
